--- a/index.html
+++ b/index.html
@@ -82,16 +82,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
-        <p>Associate Professor of Economics<br>University of Oklahoma</p>
-        <p>Research Fellow<br><a href="https://www.iza.org/person/24155/tyler-ransom">Institute for the Study of Labor (IZA)</a></p>
-        <p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
+        <h1>王栋宇</h1>
+        <p>统计学讲师<br>河北金融学院统计与数据科学学院</p>
+    <h3><a href="https://wdy.github.io/">首页</a></h3>
+        <h3><a href="https://wdy.github.io/research.html">研究</a></h3>
+    <h3><a href="https://wdy.github.io/research/CV.pdf">简历</a></h3>  
+        <h3><a href="https://wdy.github.io/code.html">代码</a></h3> 
+        <h3><a href="https://wdy.github.io/teaching.html">教学</a></h3> 
+        <h3><a href="https://wdy.github.io/personal.html">个人</a></h3>
         <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fas fa-fw fa-envelope"></i> Email</a><br>
