--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="wrapper">
       <header>
         <h1>王栋宇</h1>
-        <p>统计学讲师<br>河北金融学院统计与数据科学学院</p>
+        <p>统计学专业讲师<br>河北金融学院统计与数据科学学院<br>西南财经大学经济学院，经济学学士<br>中国农业大学人文与发展学院，应用经济学硕士</p>
     <h3><a href="https://wdy.github.io/">首页</a></h3>
         <h3><a href="https://wdy.github.io/research.html">研究</a></h3>
     <h3><a href="https://wdy.github.io/research/CV.pdf">简历</a></h3>  
@@ -92,8 +92,13 @@
         <h3><a href="https://wdy.github.io/personal.html">个人</a></h3>
         <b>Social</b><br>
         <div class="social-row">
-          <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fas fa-fw fa-envelope"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar"></i> Scholar</a><br>
+          <a href="mailto:wangdongyu5d@163.com" class="author-social" target="_blank"><i class="fas fa-fw fa-envelope"></i> Email</a><br>
+          <a href="https://www.douyin.com/user/MS4wLjABAAAA9BnT9UmfRcEnKKN_o-ffi7dYWb2HCQQa47PW_9Wm4a8" target="_blank" class="author-social">
+  <svg width="1em" height="1em" viewBox="0 0 256 256" fill="currentColor" style="vertical-align:-0.125em;">
+    <path d="M189.7 92.7c-15.5-3.8-27.3-15.5-31-31-4.3-17.8-4.3-46.4 0-64.2.3-1.3-.5-2.5-1.8-2.5h-31c-1.3 0-2.3 1-2.3 2.3v158.8c0 9.5-7.7 17.2-17.2 17.2s-17.2-7.7-17.2-17.2V57.3c0-1.3-1-2.3-2.3-2.3H58c-1.3 0-2.3 1-2.3 2.3v97c0 38.8 31.5 70.3 70.3 70.3s70.3-31.5 70.3-70.3V127.5c12.8 8.5 28.2 13.5 44.8 13.5 1.3 0 2.3-1 2.3-2.3v-26c-1.7-12.8-17.2-13.3-36-17.6z"/>
+  </svg>
+  抖音
+</a><br>
           <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid"></i> ORCID</a><br>
           <a href="http://ideas.repec.org/f/pra541.html"><i class="ai ai-fw ai-ideas-repec"></i> RePEc</a><br>
           <a href="https://github.com/tyleransom"><i class="fab fa-fw fa-github"></i> GitHub</a><br>
