--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
         <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:wangdongyu5d@163.com" class="author-social" target="_blank"><i class="fas fa-fw fa-envelope"></i> Email</a><br>
-          <a href="https://www.douyin.com/user/MS4wLjABAAAA9BnT9UmfRcEnKKN_o-ffi7dYWb2HCQQa47PW_9Wm4a8" target="_blank" class="author-social">
-  <svg width="1em" height="1em" viewBox="0 0 256 256" fill="currentColor" style="vertical-align:-0.125em;">
+         <a href="https://www.douyin.com/user/MS4wLjABAAAA9BnT9UmfRcEnKKN_o-ffi7dYWb2HCQQa47PW_9Wm4a8" target="_blank" class="author-social">
+  <svg width="1em" height="1em" viewBox="0 0 256 256" fill="#000" style="vertical-align:-0.125em; margin-right:.25em;">
     <path d="M189.7 92.7c-15.5-3.8-27.3-15.5-31-31-4.3-17.8-4.3-46.4 0-64.2.3-1.3-.5-2.5-1.8-2.5h-31c-1.3 0-2.3 1-2.3 2.3v158.8c0 9.5-7.7 17.2-17.2 17.2s-17.2-7.7-17.2-17.2V57.3c0-1.3-1-2.3-2.3-2.3H58c-1.3 0-2.3 1-2.3 2.3v97c0 38.8 31.5 70.3 70.3 70.3s70.3-31.5 70.3-70.3V127.5c12.8 8.5 28.2 13.5 44.8 13.5 1.3 0 2.3-1 2.3-2.3v-26c-1.7-12.8-17.2-13.3-36-17.6z"/>
-  </svg>
-  抖音
+  </svg>抖音
 </a><br>
-          <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid"></i> ORCID</a><br>
-          <a href="http://ideas.repec.org/f/pra541.html"><i class="ai ai-fw ai-ideas-repec"></i> RePEc</a><br>
+          <a href="https://www.douyin.com/user/MS4wLjABAAAA9BnT9UmfRcEnKKN_o-ffi7dYWb2HCQQa47PW_9Wm4a8" target="_blank" class="author-social"><svg width="1em" height="1em" viewBox="0 0 256 256" fill="currentColor" style="vertical-align:-0.125em;"><path d="M189.7 92.7c-15.5-3.8-27.3-15.5-31-31-4.3-17.8-4.3-46.4 0-64.2.3-1.3-.5-2.5-1.8-2.5h-31c-1.3 0-2.3 1-2.3 2.3v158.8c0 9.5-7.7 17.2-17.2 17.2s-17.2-7.7-17.2-17.2V57.3c0-1.3-1-2.3-2.3-2.3H58c-1.3 0-2.3 1-2.3 2.3v97c0 38.8 31.5 70.3 70.3 70.3s70.3-31.5 70.3-70.3V127.5c12.8 8.5 28.2 13.5 44.8 13.5 1.3 0 2.3-1 2.3-2.3v-26c-1.7-12.8-17.2-13.3-36-17.6z"/></svg>抖音</a><br>
+          <a href="https://www.hbfu.edu.cn/"><i class="ai ai-fw ai-orcid"></i>河北金融学院</a><br>
+          <a href="https://news.hbfu.edu.cn/dsj"><i class="ai ai-fw ai-ideas-repec"></i>统计与数据科学学院</a><br>
           <a href="https://github.com/tyleransom"><i class="fab fa-fw fa-github"></i> GitHub</a><br>
           <a href="https://tyleransom.substack.com" class="author-social" target="_blank"><i class="fas fa-fw fa-rss"></i> Substack</a><br>
           <a href="http://x.com/tyleransom" class="author-social" target="_blank"><i class="fab fa-fw fa-x-twitter"></i> X</a><br>
