--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
   </svg>抖音
 </a><br>
           <a href="https://www.douyin.com/user/MS4wLjABAAAA9BnT9UmfRcEnKKN_o-ffi7dYWb2HCQQa47PW_9Wm4a8" target="_blank" class="author-social"><svg width="1em" height="1em" viewBox="0 0 256 256" fill="currentColor" style="vertical-align:-0.125em;"><path d="M189.7 92.7c-15.5-3.8-27.3-15.5-31-31-4.3-17.8-4.3-46.4 0-64.2.3-1.3-.5-2.5-1.8-2.5h-31c-1.3 0-2.3 1-2.3 2.3v158.8c0 9.5-7.7 17.2-17.2 17.2s-17.2-7.7-17.2-17.2V57.3c0-1.3-1-2.3-2.3-2.3H58c-1.3 0-2.3 1-2.3 2.3v97c0 38.8 31.5 70.3 70.3 70.3s70.3-31.5 70.3-70.3V127.5c12.8 8.5 28.2 13.5 44.8 13.5 1.3 0 2.3-1 2.3-2.3v-26c-1.7-12.8-17.2-13.3-36-17.6z"/></svg>抖音</a><br>
-          <a href="https://www.hbfu.edu.cn/"><i class="ai ai-fw ai-orcid"></i>河北金融学院</a><br>
-          <a href="https://news.hbfu.edu.cn/dsj"><i class="ai ai-fw ai-ideas-repec"></i>统计与数据科学学院</a><br>
+          <a href="https://www.hbfu.edu.cn/"><i class="fas fa-university"></i>河北金融学院</a><br>
+          <a href="https://news.hbfu.edu.cn/dsj"><i class="fas fa-chalkboard-teacher"></i>统计与数据科学学院</a><br>
           <a href="https://github.com/tyleransom"><i class="fab fa-fw fa-github"></i> GitHub</a><br>
           <a href="https://tyleransom.substack.com" class="author-social" target="_blank"><i class="fas fa-fw fa-rss"></i> Substack</a><br>
           <a href="http://x.com/tyleransom" class="author-social" target="_blank"><i class="fab fa-fw fa-x-twitter"></i> X</a><br>
@@ -115,13 +115,13 @@
       </header>
       <section>
       <img src="IMG_1781-Edit copy.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
-  <p>I am an Associate Professor of <a href="http://www.ou.edu/cas/economics">Economics</a> at the <a href="http://www.ou.edu/">University of Oklahoma</a>, a Research Fellow at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>, and a Fellow at <a href="https://www.globalabororganization.org/">Global Labor Organization (GLO)</a>. I received my PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in 2015, where I specialized in dynamic models of human capital accumulation.</p>
+  <p>我是河北金融学院统计与数据科学学院经济统计学教研室，讲师。我2016年毕业于西南财经大学经济学院，经济学基础人才培养基地，经济学学士；2020年毕业于中国农业大学人文与发展学院，应用经济学硕士。毕业后进入金融学院工作至今。</p>
 
-  <p>My research focuses on labor economics, economics of education, urban economics, and applications of machine learning. I have published extensively in leading economics journals, including the <i>Journal of Political Economy</i>, the <i>Journal of Labor Economics</i>, the <i>Journal of Human Resources</i>, and the <i>Journal of Econometrics</i>. My recent work has examined college admissions practices, educational inequality, and human capital development. I also serve as an Associate Editor of the <i>Annals of Economics and Statistics</i> and <i>Economics of Education Review</i>.</p>
+  <p>在河北金融学院，我主要从事统计学相关的教学工作。我讲授的课程包括《统计学》《计量经济学》《机器学习与商业案例应用》《多元统计分析与综合评价》《金融统计与量化投资》等。.</p>
 
   <p>At OU, I direct the Economics BA/MA Program and teach courses in econometrics, data science, and economics of education at both undergraduate and graduate levels. My contributions to research and teaching were recognized with the 2022 Irene Rothbaum Outstanding Assistant Professor Award from the OU Dodge Family College of Arts & Sciences. My research has had significant policy impact and has been featured in major media outlets including the <i>New York Times</i>, <i>The Economist</i>, <i>The Atlantic</i>, and <i>The Guardian</i>. In 2025, I was awarded the Heritage Foundation Freedom and Opportunity Academic Prize in recognition of my scholarship and contributions to the academic community.</p>
 
-  <p>I bring strong technical expertise to my research, with proficiency in Matlab, Stata, R, Julia, Python, LaTeX, Shell/Bash, SLURM, and Git. I also have advanced proficiency in Japanese and beginning knowledge of Korean and German.</p>
+  <p>我精通统计分析软件应用，主要使用Stata、EViews、SPSS、Python, MAXDEA等。擅长统计综合评价、空间计量分析、路径分析、机器学习及因果推断技术。</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
